# BottleFlip

./: readme.md
src/: CMakeLists.txt  block.c  block.h  common.h  game.c  game.h  main.c  main.h  menu.c  menu.h  pause.c  pause.h  player.c  player.h  setting.c  setting.h
src/include/SDL2/: SDL_events.h  SDL_hints.h  SDL_keyboard.h  SDL_main.h  SDL_messagebox.h  SDL_metal.h  SDL_misc.h  SDL_mouse.h  SDL_quit.h  SDL_render.h  SDL_shape.h  SDL_system.h  SDL_touch.h  SDL_ttf.h  SDL_video.h
src/utils/: audio.c  audio.h  display.c  display.h  input.c  input.h
